* Monster AI now knows how to zap wands at you!

Fixes:
* Mainly when toggling full screen mode on linux, it will now wait until you release the key to apply.
* Imprisoned necromancer can cast spells.
* Elianise will no longer steal from you.
* All the ambassadors will stay in the Cathedral and not wander around.
* Nerf mind worm damage a bit.

Version 0.52, released 24th March 2018
--------------------------------------

Changes:
* Enhanced scaling/stretching graphics using XBRZScale code!! (only in "zoom in (l)ook mode"...)
* New Mind worms!!
* Sound files from IVAN3D, plus other new sounds!! (utilizes more advanced config file syntax than before)
* UT vault added.
* Headless ghosts.
* Outlined graphics from IVAN3D.
* Option to display the turn number on log messages.

Tomb of Xinroch, now with MORE evil:
* Buffed both Xinrochs.
* Buffed Xinroch's grave keeper.
* Slightly better rewards for bosses.
* One more vault for Catacombs.
* Maze on ghost Xinroch's level made more interesting.
* Tweaked dwarven gas chamber.
* Added two hidden vaults to TX.
* Added a small TX shop.
* Plus other slight tweaks to TX.

Shields:
* Shields also give AV.
* AV for shields displayed.
* Shield strength modifiers adjusted.
* Shield materials added.

Fixes:
* New bugs added!

Hotfix 0.52.1:
* Add changelog for the new version.
* Fix OP sirens.

Version 0.51, released 23rd December 2017
-----------------------------------------

Changes:
* Skeleton puppies!!!
* Buffed chilling axes and scythes of terror.
* Buffed regeneration.
* Item graphics from CLIVAN ported.
* Beast claws from alien mod ported, they are rather rare weapons using unarmed combat skill.
* Mangos and sausages added!
* Masks, a new headgear, added. Necromancers wear them.
* Taiahas ported from CLIVAN.
* Cauldrons added, but not randomly generated.
* Some potted plants and clocks added to the Cathedral, to make it more homey.
* New Fearless (Panic immunity) and Fasting status effects.
* Ring of bravery!